--- a/src/styles/components/_silderr.scss
+++ b/src/styles/components/_silderr.scss
@@ -1,14 +1,6 @@
 @use "../utilities/vars" as *;
-// for desktop
-// #backdrop{
-//     object-fit: scale-down;
-//     object-position: top;
-//     width: 100%;
-//     height: 900px;
-//     margin: 0 auto;
-// }
 .slick-slide {
-    transform: scale(1); /* Default scale */
+    transform: scale(1);
     z-index: 1;
     transition: transform 0.3s ease-in-out;
 }
@@ -19,7 +11,7 @@
 }
 
 .slick-slide:not(.slick-center) {
-    transform: scale(0.8); /* Scale down non-centered slides */
+    transform: scale(0.8);
     z-index: 1;
 }
   
@@ -45,8 +37,6 @@
         width: 100%;
         position: relative;
     }
-
- 
     #hero-desktop{
         bottom: 1.2rem;
         position: absolute;
@@ -62,11 +52,11 @@
         h2{
             bottom: 0;
             color: white;
-            font-size: 1.7rem;
+            font-size: 1.4rem;
             font-weight: 800;
         }
         p{
-            font-size: 0.8rem;
+            font-size: 0.7rem;
             margin-top: 0.6rem;
         }
         #slider-buttons{
@@ -74,14 +64,30 @@
             align-items: center;
             margin-top: 0.5rem;
         }
+        #silder-heart{
+            opacity: 0.6;
+            transition: $transiting;
+            &:hover{
+                transition: $transiting;
+                opacity: 1;
+            }
+        }
+        #silder-heart-filled{
+            opacity: 1;
+        }
+        #silder-heart,
+        #silder-heart-filled {
+            width: 32px;
+            height: 32px; 
+        }
         button{
             padding: 0.5rem 1rem;
-            margin-right: 2rem;
+            margin-right: 1.2rem;
             font-family: $font;
             border-radius: 0.5rem;
             background-color: white;
+            text-transform: uppercase;
         }
-
     }
     @media (min-width:$desktop-larger) {
         #hero-wrapper{
@@ -94,13 +100,19 @@
         }
         #hero-desktop{
             #hero-info{
-                position: absolute;
+                // position: absolute;
                 bottom: 2rem;
                 left: 10rem;
                 margin-bottom: 2rem;
-                // bottom: 5rem;
-                // left: 13rem;
+            } 
+            #silder-heart,#silder-heart-filled{
+                width: 40px;
+                height: 40px; 
             }
+            #slider-buttons{
+                margin-top: 1.2rem;
+            }
+           
         }
     }
 }
